--- a/data/css/style.css
+++ b/data/css/style.css
@@ -3013,14 +3013,14 @@ video {
 }
 #page-wrapper {
   padding: 0 15px;
-  min-height: 568px;
+  min-height: 574px;
   position: relative !important;
 }
 @media (min-width: 768px) {
   #page-wrapper {
     position: inherit;
     margin: 0 0 0 240px;
-    min-height: 1000px;
+   /* min-height: 1000px;*/
   }
 }
 .title-action {
@@ -5817,7 +5817,7 @@ body.rtls.top-navigation .footer.fixed {
   .body-small.rtls #page-wrapper {
     position: inherit;
     margin: 0 0 0 0px;
-    min-height: 1000px;
+    /*min-height: 1000px;*/
   }
   .body-small.rtls .navbar-static-side {
     display: none;
@@ -6297,7 +6297,7 @@ body.skin-3 {
   #page-wrapper {
     position: inherit;
     margin: 0 0 0 220px;
-    min-height: 1200px;
+   /* min-height: 1200px;*/
   }
   .navbar-static-side {
     z-index: 2001;
@@ -6314,7 +6314,7 @@ body.skin-3 {
   #page-wrapper {
     position: inherit;
     margin: 0 0 0 0px;
-    min-height: 1000px;
+    /*min-height: 1000px;*/
   }
   .body-small .navbar-static-side {
     display: none;
