实现吧台管理

--- a/data/css/style.css
+++ b/data/css/style.css
@@ -3132,7 +3132,7 @@ body.body-small .footer.fixed {
 .table > tfoot > tr > td {
   border-top: 1px solid #e7eaec;
   line-height: 1.42857;
-  padding: 8px;
+  padding: 8px 2px;
   vertical-align: top;
 }
 /* PANELS */
